5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1602_842.log
== TEST (2019-04-02 19:17:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("1113"))
soma=0
while(var>0):
resto=var%10
var=var//10
soma=soma+resto
print=(soma)
-- ERROR:
File "XXXX", line 7
    resto=var%10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:17:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("1113"))
soma=0
while(var>0):
resto=var%10
var=var//10
soma=soma+resto
print=(soma)
-- EXECUTION TIME:
0.195265
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 7
    resto=var%10
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var=int(input("1113"))
soma=0
while(var>0):
resto=var%10
var=var//10
soma=soma+resto
print=(soma)
-- ERROR:
File "XXXX", line 7
    resto=var%10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:17:33) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
resto=var%10
var=var//10
soma=soma+resto
print=(soma)
-- EXECUTION TIME:
0.20653
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 4
    resto=var%10
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:36) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
resto=var%10
var=var//10
soma=soma+resto
print=(soma)
-- ERROR:
File "XXXX", line 4
    resto=var%10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:54) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
resto=var % 10
var=var//10
soma=soma+resto
print=(soma)
-- ERROR:
File "XXXX", line 4
    resto=var % 10
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:18:01) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
resto=var % 10
var=var//10
soma=soma+resto
print=(soma)
-- EXECUTION TIME:
0.151894
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 4
    resto=var % 10
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:04) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
var=var//10
resto=var % 10
soma=soma+resto
print=(soma)
-- ERROR:
File "XXXX", line 4
    var=var//10
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:19:11) 
-- CODE:
var=int(input("1113"))
soma=0
while(var>0):
var=var//10
resto=var % 10
soma=soma+resto
print=(soma)
-- EXECUTION TIME:
0.137686
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 4
    var=var//10
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
